tests/rosetta/transpiler/OCaml/2048.error
exit status 2
File "/workspace/mochi/tests/rosetta/transpiler/OCaml/2048.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: "2048" is not a valid module name.
File "/workspace/mochi/tests/rosetta/transpiler/OCaml/2048.ml", line 196, characters 53-59:
196 |   if (List.nth (List.nth (!b) (!y)) (!x) <> List.nth (new_) (!x)) then (
                                                           ^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
